--- a/templates/components/chat/templates.html
+++ b/templates/components/chat/templates.html
@@ -31,11 +31,7 @@
 
 <!-- User Icon template -->
 <template id="user-icon-template">
-  <svg
-    viewBox="0 0 24 24"
-    xmlns="http://www.w3.org/2000/svg"
-    class="w-4 h-4"
-  >
+  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="w-4 h-4">
     <circle cx="12" cy="8" fill="currentColor" r="4" />
     <path
       d="M20,19v1a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V19a6,6,0,0,1,6-6h4A6,6,0,0,1,20,19Z"
