--- a/templates/layouts/chat_base.html
+++ b/templates/layouts/chat_base.html
@@ -19,15 +19,15 @@
     ws-connect="/ws"
   >
     {% include "components/chat/header.html" %}
-    
+
     <div class="flex h-[calc(100vh-57px)]">
-      {% include "components/chat/sidebar_left.html" %}
-      {% include "components/chat/main_chat.html" %}
-      {% include "components/chat/sidebar_right.html" %}
+      {% include "components/chat/sidebar_left.html" %} {% include
+      "components/chat/main_chat.html" %} {% include
+      "components/chat/sidebar_right.html" %}
     </div>
 
-    {% include "components/chat/error_section.html" %}
-    {% include "components/chat/templates.html" %}
-    {% include "components/chat/websocket_scripts.html" %}
+    {% include "components/chat/error_section.html" %} {% include
+    "components/chat/templates.html" %} {% include
+    "components/chat/websocket_scripts.html" %}
   </body>
 </html>
