--- a/templates/components/chat/main_chat.html
+++ b/templates/components/chat/main_chat.html
@@ -11,9 +11,11 @@
         id="input"
         name="content"
         type="text"
-        class="flex-grow bg-black p-4 focus:outline-none"
+        class="text-sm flex-grow bg-black p-4 focus:outline-none"
         placeholder="Message"
         autofocus="true"
+        autocomplete="false"
+        spellcheck="false"
       />
       <button
         id="submit-button"
