--- a/templates/components/chat/main_chat.html
+++ b/templates/components/chat/main_chat.html
@@ -11,7 +11,8 @@
         id="input"
         name="content"
         rows="1"
-        class="text-sm flex-grow bg-black p-4 focus:outline-none resize-none overflow-hidden min-h-[60px]"
+        style="resize: none;"
+        class="text-sm flex-grow bg-black p-4 focus:outline-none overflow-hidden min-h-[60px]"
         placeholder="Message"
         autofocus="true"
         autocomplete="false"
@@ -19,7 +20,7 @@
       ></textarea>
       <button
         id="submit-button"
-        class="w-[80px] px-4 border-l border-white hover:bg-white hover:text-black transition-colors"
+        class="w-[80px] h-[60px] flex-shrink-0 px-4 border-l border-white hover:bg-white hover:text-black transition-colors"
       >
         Send
       </button>
