--- a/templates/components/chat/main_chat.html
+++ b/templates/components/chat/main_chat.html
@@ -18,12 +18,14 @@
         autocomplete="false"
         spellcheck="false"
       ></textarea>
-      <button
-        id="submit-button"
-        class="w-[80px] h-[60px] flex-shrink-0 px-4 border-l border-white hover:bg-white hover:text-black transition-colors"
-      >
-        Send
-      </button>
+      <div class="relative border-l border-white">
+        <button
+          id="submit-button"
+          class="w-[80px] h-[60px] absolute bottom-0 px-4 hover:bg-white hover:text-black transition-colors"
+        >
+          Send
+        </button>
+      </div>
     </form>
   </div>
 </div>
