--- a/templates/components/chat/main_chat.html
+++ b/templates/components/chat/main_chat.html
@@ -18,10 +18,10 @@
         autocomplete="false"
         spellcheck="false"
       ></textarea>
-      <div class="relative border-l border-white">
+      <div class="relative border-l border-white w-[80px]">
         <button
           id="submit-button"
-          class="w-[80px] h-[60px] absolute bottom-0 px-4 hover:bg-white hover:text-black transition-colors"
+          class="w-[80px] h-[60px] absolute bottom-0 right-[80px] px-4 hover:bg-white hover:text-black transition-colors"
         >
           Send
         </button>
