--- a/templates/components/chat/main_chat.html
+++ b/templates/components/chat/main_chat.html
@@ -19,7 +19,7 @@
         spellcheck="false"
       ></textarea>
       <div class="relative w-[80px]">
-        <div class="absolute inset-y-0 left-1/2 border-l border-white"></div>
+        <div class="absolute inset-y-0 bottom-[60px] left-1/2 border-l border-white"></div>
         <button
           id="submit-button"
           class="w-[80px] h-[60px] absolute bottom-0 px-4 hover:bg-white hover:text-black transition-colors"
