--- a/templates/components/chat/header.html
+++ b/templates/components/chat/header.html
@@ -3,11 +3,7 @@
     <div class="w-64 flex items-center justify-center">
       <a href="/" class="hover:text-gray-300 transition-colors">OpenAgents</a>
     </div>
-    <div class="flex-1">
-      <!-- Center header content will go here -->
-    </div>
-    <div class="w-64">
-      <!-- Right header content will go here -->
-    </div>
+    <div class="flex-1"></div>
+    <div class="w-64"></div>
   </div>
 </div>
